[package]
name = "unblend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Longor1996"]
readme = "README.md"

categories = ["command-line-utilities"]
keywords = ["blender", "blend", "archive"]
description = "A program to explode blend files into their many parts."
repository = "https://github.com/Longor1996/unblend"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
zip_next = { version = "0.10", default-features = false, features = [] }
align-address = "0.1.0"
globset = "0.4"
tar = "0.4"
